--- a/sw/tools/wiki_gen/Makefile
+++ b/sw/tools/wiki_gen/Makefile
@@ -1,15 +1,10 @@
 
 
-all: 
+all: 	wiki_gen
+	cd ../../../conf/autopilot/subsystems/fixedwing; ls -1 > list_of_files.txt; ../../../../sw/tools/wiki_gen/wiki_gen list_of_files.txt > ../../../../sw/tools/wiki_gen/fixedwing.wiki; rm list_of_files.txt
+
+wiki_gen:
 	g++ wiki_gen.c -o wiki_gen
-
-
-parse:
-	ls -1 > list_of_files.txt
-	./wiki_gen list_of_files.txt > dir.wiki
-
-
-
 
 
 
