fixing compilation for target sim and jsbsim

--- a/Makefile.ac
+++ b/Makefile.ac
@@ -157,10 +157,10 @@ BOOTLOADER_DEVICE=/dev/ttyUSB0
 tiny_bl.upload:
 	lpc21isp -control $(AIRBORNE)/arm7/test/bootloader/bl.hex $(BOOTLOADER_DEVICE) 38400 12000
 
-jsbsim jsbsim.compile: ac_h
+jsbsim jsbsim.compile: jsbsim.ac_h
 	cd $(AIRBORNE); $(MAKE) TARGET=jsbsim ARCHI=jsbsim ARCH=jsbsim all
 
-sim: ac_h
+sim sim.compile: sim.ac_h
 	cd $(AIRBORNE); $(MAKE) TARGET=sim ARCHI=sim ARCH=sim all
 
 # Rules for backward compatibility (old guys are used to !)
