Finished documentation for pprz_algebra. There are still many notes in it, which can be easily removed in the headfile (command: mynote)

--- a/doc/pprz_algebra/Makefile
+++ b/doc/pprz_algebra/Makefile
@@ -1,8 +1,8 @@
-doc_libeknav.pdf: headfile.tex
+doc_pprz_algebra.pdf: headfile.tex
 	pdflatex $<
 bib:
 	bibtex headfile
 
 clean:
-	rm -f *~ *.aux *.bbl *.blg *.log *.out *.toc *.pdf *.dvi *.ps
+	rm -f *~ *.aux *.bbl *.blg *.log *.out *.toc *.dvi *.ps
 	find . -name '*~' -exec rm -f {} \;
