introduced .MCU makefile variable so we can remove .ARCH later which is only used to set the MCU type for the compiler. .MCU is now only used for AVRs as for the others it is set in the makefiles (e.g. Makefile.arm7, Makefile.stm32, etc.)

--- a/conf/Makefile.arm7
+++ b/conf/Makefile.arm7
@@ -55,7 +55,7 @@ COPY = cp
 Q=@
 
 # MCU name and submodel
-MCU = $($(TARGET).ARCH)
+MCU = arm7tdmi
 THUMB    = -mthumb
 THUMB_IW = -mthumb-interwork
 
