--- a/conf/Makefile.stm32
+++ b/conf/Makefile.stm32
@@ -18,8 +18,8 @@
 # You should have received a copy of the GNU General Public License
 # along with paparazzi; see the file COPYING.  If not, write to
 # the Free Software Foundation, 59 Temple Place - Suite 330,
-# Boston, MA 02111-1307, USA.  
-# 
+# Boston, MA 02111-1307, USA.
+#
 
 #
 # This is the common Makefile for the stm32-target.
@@ -69,13 +69,13 @@ endif
 
 # input files
 SRCS = $($(TARGET).srcs)
-#ASRC = 
+#ASRC =
 
 # object files
-COBJ    = $(SRCS:%.c=$(OBJDIR)/%.o) 
+COBJ    = $(SRCS:%.c=$(OBJDIR)/%.o)
 AOBJ    = $(ASRC:%.S=$(OBJDIR)/%.o)
 
-# linker script : 
+# linker script :
 #   if LDSCRIPT is defined in the airframe use that independantly of TARGET
 #   if not, and a TARGET.LDSCRIPT is defined, use that
 #   if not, use the default STM32f103re_flash.ld
@@ -87,7 +87,7 @@ LDSCRIPT = $($(TARGET).LDSCRIPT)
 endif
 endif
 
-CFLAGS = -I. -I./$(ARCHI) $(INCLUDES) -D__thumb2__ -Wall -c -msoft-float -O$(OPT)
+CFLAGS = -I. -I./$(ARCH) $(INCLUDES) -D__thumb2__ -Wall -c -msoft-float -O$(OPT)
 CFLAGS += -Wl,gc-sections
 CFLAGS += -mcpu=$(MCU) -mthumb -ansi
 CFLAGS += -std=gnu99
@@ -100,7 +100,7 @@ CFLAGS += -Wpointer-arith -Wswitch
 CFLAGS += -Wredundant-decls -Wreturn-type -Wshadow -Wunused
 CFLAGS += -Wa,-adhlns=$(OBJDIR)/$(notdir $(subst $(suffix $<),.lst,$<))
 CFLAGS += -Wnested-externs
-CFLAGS += -Wmissing-prototypes 
+CFLAGS += -Wmissing-prototypes
 CFLAGS += -Wstrict-prototypes
 CFLAGS += -Wmissing-declarations
 CFLAGS += -Wswitch-default
@@ -112,7 +112,7 @@ AFLAGS += -x assembler-with-cpp -Wa,-adhlns=$(OBJDIR)/$(<:.S=.lst),--g$(DEBUG)
 
 LDFLAGS = -D__thumb2__ -T$(LDSCRIPT) -nostartfiles  -L$(GCC_LIB_DIR) -O$(OPT) --gc-sections
 LDFLAGS += -Wl,-Map=$(OBJDIR)/$(TARGET).map,--cref,--gc-sections
-LDLIBS  += -lc -lm -lgcc -lcmsis -lstm32 
+LDLIBS  += -lc -lm -lgcc -lcmsis -lstm32
 
 CPFLAGS = -j .isr_vector -j .text -j .data
 CPFLAGS_BIN = -Obinary
@@ -131,7 +131,7 @@ build: elf bin hex
 elf: $(OBJDIR)/$(TARGET).elf
 bin: $(OBJDIR)/$(TARGET).bin
 hex: $(OBJDIR)/$(TARGET).hex
-lss: $(OBJDIR)/$(TARGET).lss 
+lss: $(OBJDIR)/$(TARGET).lss
 sym: $(OBJDIR)/$(TARGET).sym
 
 # Display size of file.
@@ -176,7 +176,7 @@ sizeafter:
 $(OBJDIR)/%.o : %.c $(OBJDIR)/../Makefile.ac
 	@echo CC $@
 	$(Q)test -d $(dir $@) || mkdir -p $(dir $@)
-	$(Q)$(CC) -c $(CFLAGS) $< -o $@ 
+	$(Q)$(CC) -c $(CFLAGS) $< -o $@
 
 # Assemble: create object files from assembler source files. ARM/Thumb
 $(AOBJ) : $(OBJDIR)/%.o : %.S
@@ -191,12 +191,12 @@ else ifeq ($(FLASH_MODE),JTAG)
 upload:  $(OBJDIR)/$(TARGET).bin
 	@echo -e "  OOCD\t$<"
 	$(Q)$(OOCD) -f interface/$(OOCD_INTERFACE).cfg \
-                -f board/$(OOCD_BOARD).cfg \
-                -c init \
-                -c "reset halt" \
-                -c "flash write_image erase $(OBJDIR)/$(TARGET).bin 0x08000000" \
-                -c reset \
-                -c shutdown
+				-f board/$(OOCD_BOARD).cfg \
+				-c init \
+				-c "reset halt" \
+				-c "flash write_image erase $(OBJDIR)/$(TARGET).bin 0x08000000" \
+				-c reset \
+				-c shutdown
 endif
 
 
@@ -258,11 +258,8 @@ $(OBJDIR)/.depend:
 	@test -d $(OBJDIR) || mkdir -p $(OBJDIR)
 	$(Q)$(CC) -MM -MG $(THUMB) $(CFLAGS) $($(TARGET).srcs) | sed 's|\([^\.]*\.o\)|$(OBJDIR)/\1|' > $@
 
-ifneq ($(MAKECMDGOALS),clean) 
-ifneq ($(MAKECMDGOALS),erase) 
+ifneq ($(MAKECMDGOALS),clean)
+ifneq ($(MAKECMDGOALS),erase)
 -include $(OBJDIR)/.depend
 endif
 endif
-
-
-
