move sim dir to arch as well, sim compiles again

--- a/conf/Makefile.lpc21
+++ b/conf/Makefile.lpc21
@@ -26,6 +26,7 @@
 # This is the common Makefile for the arm7-target.
 #
 
+# this should not be needed
 #SRC_ARCH = lpc21
 
 # Define programs and commands.
