--- a/conf/Makefile.sim
+++ b/conf/Makefile.sim
@@ -1,5 +1,5 @@
 # Hey Emacs, this is a -*- makefile -*-
-# 
+#
 #   $Id$
 #   Copyright (C) 2006 Pascal Brisset, Antoine Drouin
 #
@@ -18,14 +18,15 @@
 # You should have received a copy of the GNU General Public License
 # along with paparazzi; see the file COPYING.  If not, write to
 # the Free Software Foundation, 59 Temple Place - Suite 330,
-# Boston, MA 02111-1307, USA.  
-# 
+# Boston, MA 02111-1307, USA.
+#
 
 #
 # This is the common Makefile for the sim target.
 #
 
-SRC_ARCH = sim
+# this should not be needed
+#SRC_ARCH = sim
 
 ifneq ($(SIM_TYPE),JSBSIM)
 CC = gcc
@@ -145,8 +146,8 @@ $(OBJDIR)/.depend:
 	@echo DEPEND $@
 	$(Q)$(CC) -MM -MG $(CFLAGS) $($(TARGET).srcs) | sed 's|\([^\.]*\.o\)|$(OBJDIR)/\1|' > $@
 
-ifneq ($(MAKECMDGOALS),clean) 
-ifneq ($(MAKECMDGOALS),erase) 
+ifneq ($(MAKECMDGOALS),clean)
+ifneq ($(MAKECMDGOALS),erase)
 -include $(OBJDIR)/.depend
 endif
 endif
