--- a/conf/Makefile.stm32
+++ b/conf/Makefile.stm32
@@ -25,7 +25,7 @@
 # This is the common Makefile for the stm32-target.
 #
 
-SRC_ARCH = stm32
+SRC_ARCH = arch/stm32
 
 # Pretty Printer
 # Call with "make Q=''" to get full command display
