Created headfile, started to output filters data

--- a/sw/airborne/fms/libeknav/Makefile
+++ b/sw/airborne/fms/libeknav/Makefile
@@ -4,7 +4,9 @@ raw_log_to_ascii: raw_log_to_ascii.c
 
 
 fetch_log:
-		scp @auto3:/tmp/log_test3.bin .
+		scp @auto1:/tmp/log_test3.bin .
+		scp @auto1:/tmp/log_ins_test3.data .
+		./raw_log_to_ascii > bla.dat
 
 clean:
 	-rm -f *.o *~ *.d
