added generated lexer code

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@
 /sw/lib/ocaml/expr_parser.ml
 /sw/lib/ocaml/expr_parser.mli
 /sw/lib/ocaml/gtk_papget_led_editor.ml
+/sw/lib/ocaml/expr_lexer.ml
 
 # /sw/logalizer/
 /sw/logalizer/plot
