library search paths updated for OSX

--- a/sw/ground_segment/tmtc/Makefile
+++ b/sw/ground_segment/tmtc/Makefile
@@ -37,7 +37,7 @@ OCAMLOPT = ocamlopt
 OCAMLLIB = ../../lib/ocaml
 OCAMLNETINCLUDES=$(shell ocamlfind query -r -i-format netstring)
 OCAMLNETCMA=$(shell ocamlfind query -r -a-format -predicates byte netstring)
-INCLUDES= -I $(OCAMLLIB) -I ../multimon -I +lablgtk2 -I +xml-light $(OCAMLNETINCLUDES)
+INCLUDES= -I $(OCAMLLIB) -I ../multimon $(shell ocamlfind query -r -i-format lablgtk2) $(shell ocamlfind query -r -i-format xml-light) $(OCAMLNETINCLUDES)
 LIBPPRZCMA=$(OCAMLLIB)/lib-pprz.cma
 
 SERVERCMO = server_globals.cmo aircraft.cmo wind.cmo airprox.cmo kml.cmo fw_server.ml booz_server.ml server.cmo
